--- a/LOG.Rmd
+++ b/LOG.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "LOG & EXTENDED README"
 author: "Henrik Christiansen"
-date: "February 17, 2021"
+date: "February 21, 2021"
 output:
   pdf_document: default
   html_document: default
@@ -18,6 +18,10 @@ RADseq optimization pilot experiment with several Antarctic species.
 Contact: <henrik.christiansen@kuleuven.be>
 
 ## Log:
+
+21/02/2020: fixed some git issue with large .RDataTmp file
+
+18/02/2020: updated and rerun 02_empirical_digests.R
 
 17/02/2020: updated and consolidated code and files locally and on github
 
