--- a/LOG.Rmd
+++ b/LOG.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "LOG & EXTENDED README"
 author: "Henrik Christiansen"
-date: "March 29, 2021"
+date: "May 24, 2021"
 output:
   pdf_document: default
   html_document: default
@@ -18,6 +18,8 @@ RADseq optimization pilot experiment with several Antarctic species.
 Contact: <henrik.christiansen@kuleuven.be>
 
 ## Log:
+
+24/04/2021: added extensive documentation
 
 29/03/2021: rerun 01_digests.R again
 
