--- a/LOG.Rmd
+++ b/LOG.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "LOG & EXTENDED README"
 author: "Henrik Christiansen"
-date: "June 11, 2021"
+date: "June 14, 2021"
 output:
   pdf_document: default
   html_document: default
@@ -19,7 +19,9 @@ Contact: <henrik.christiansen@kuleuven.be>
 
 ## Log:
 
-05-06/2021: added new functions and code to run marker density calculations, new script: 04_marker_density.R
+10-14/06/2021: added empirical loci statistics and updated marker density calculations
+
+05-06/2021: added new functions and code to run marker density calculations, new script: 05_marker_density.R
 
 24/04/2021: added extensive documentation
 
